Kubernete/deploy_secret.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: demo
  labels:
    name: demo
spec:
  selector:
    matchLabels:
      name: demo
  template:
    metada:  
      labels: 
        name: demo
    spec:
    volumes:
      name: configvol
      configMap: 
        name: configcm
      containers:
      - name: main
        image: busybox
        args:
          - "tail"
          - "-f"
          - "/dev/null"
