Kubernete/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      name: api
      labels:
        app: api
    spec:
      containers:
      - name: main
        image: lemoncodersbc/go-hello-world
        ports:
        - containerPort: 80
