Kubernete/pod.yaml
apiVersion: app/v1
kind: Pod
metadata:
  name: demo2
  labels:
    name: demo
spec:
  containers:
  - name: main
    image: busybox
    args:
      - "tail"
      - "-f"
      - "/dev/null"
