Kubernete/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    name: api
spec:
  rules:
  - host: testedu.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api 
            port: 
              number: 8080
